syntax = "proto3";

option csharp_namespace = "HW1.Api.Grpc";

package user_service;

import "google/protobuf/empty.proto";

service UserService {
  rpc GetUser (GetUserRequest) returns (UserResponse);
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc GetUsers (GetUsersRequest) returns (stream UserResponse);
  rpc GetUserStats (google.protobuf.Empty) returns (UserStatsResponse);
}

message GetUserRequest {
  string user_id = 1;
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
  optional string gender = 3;
}

message GetUsersRequest {
  int32 page_number = 1;
  int32 page_size = 2;
}

message UserResponse {
  string id = 1;
  string username = 2;
  string gender = 3;
  string created_at = 4;
  string updated_at = 5;
}

message UserStatsResponse {
  int32 total_users = 1;
  int32 active_users = 2;
  map<string, int32> gender_stats = 3;
  string earliest_registration = 4;
  string latest_registration = 5;
}